--- a/web/package.json
+++ b/web/package.json
@@ -10,9 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18"
+    "@ant-design/icons": "^5.4.0",
+    "antd": "^5.20.0",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -21,10 +23,13 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
     "ts-jest": "^29.2.4",
     "typescript": "^5"
   }
